Fixed alignment and color issues.

--- a/index.css
+++ b/index.css
@@ -15,8 +15,16 @@ body {
 	gap: 2em;
 }
 
+@media (max-width: 350px){
+	body {
+		align-items: start;
+	}
+}
+
 h1 {
 	margin-top: 2em;
+	color: wheat;
+	letter-spacing: 3px;
 }
 
 h2 {
